# data-contract-enforcer

./: .env.example  .gitignore  README.md  pyproject.toml
contract_registry/: subscriptions.yaml
contracts/: __init__.py  ai_extensions.py  attributor.py  cli.py  config.py  config.yaml  generator.py  lineage_loader.py  models.py  registry.py  report_generator.py  runner.py  schema_analyzer.py  utils.py
enforcer_report/: report.json
generated_contracts/: week3_extractions.schema.yml  week5_events.odcs.yaml  week5_events.schema.yml
outputs/week2/: verdict_records.jsonl
schema_snapshots/: baselines.json  llm_violation_rates.json
schema_snapshots/contracts/week3_extractions/: 20260402T025222Z.yaml  20260402T030136Z.yaml  20260402T065959Z.yaml  20260404T072610Z.yaml  20260404T082415Z.yaml  20260404T082506Z.yaml  latest.yaml
schema_snapshots/contracts/week5_events/: 20260404T071636Z.yaml  20260404T072611Z.yaml  20260404T082419Z.yaml  latest.yaml
schema_snapshots/lineage/: apex_lineage_graph.json
tests/: conftest.py  test_ai_extensions.py  test_attributor.py  test_generator.py  test_integration.py  test_lineage_loader.py  test_registry.py  test_runner.py  test_schema_analyzer.py  test_utils.py
